[gd_scene load_steps=9 format=3 uid="uid://u88p57mst16i"]

[ext_resource type="Script" path="res://objects/strike.gd" id="1_7bggd"]
[ext_resource type="Texture2D" uid="uid://nmpsxlowdlmd" path="res://assets/sprites/particle1.png" id="1_20cuc"]

[sub_resource type="Curve" id="Curve_wbi5w"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.732258, 0.589562), -1.4838, -1.4838, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_wcj86"]
curve = SubResource("Curve_wbi5w")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_im0uw"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(1.4, 1.4, 1)
spread = 180.0
initial_velocity_min = 10.0
initial_velocity_max = 50.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_wcj86")
color = Color(0.588235, 0.588235, 0.588235, 1)

[sub_resource type="Curve" id="Curve_pkd1y"]
_data = [Vector2(0, 0.848602), 0.0, 0.0, 0, 0, Vector2(0.710526, 0.343944), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_d467f"]
curve = SubResource("Curve_pkd1y")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qm2bx"]
lifetime_randomness = 0.15
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 48, 1)
angle_min = -180.0
angle_max = 180.0
direction = Vector3(-1, 0, 0)
spread = 60.0
initial_velocity_min = 5.0
initial_velocity_max = 30.0
gravity = Vector3(0, 0, 0)
linear_accel_min = -100.0
linear_accel_max = 1.0
tangential_accel_min = -10.0
tangential_accel_max = 5.0
scale_curve = SubResource("CurveTexture_d467f")
color = Color(0.588235, 0.588235, 0.588235, 1)

[node name="Strike" type="Node2D"]
script = ExtResource("1_7bggd")

[node name="StrikeBase" type="GPUParticles2D" parent="."]
amount = 64
process_material = SubResource("ParticleProcessMaterial_im0uw")
texture = ExtResource("1_20cuc")
lifetime = 0.5
explosiveness = 1.0

[node name="StrikeParticle" type="GPUParticles2D" parent="."]
position = Vector2(0, 48)
rotation = 3.14159
scale = Vector2(1, -1)
emitting = false
amount = 100
process_material = SubResource("ParticleProcessMaterial_qm2bx")
texture = ExtResource("1_20cuc")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 0.25

[node name="StrikeParticleSub" type="GPUParticles2D" parent="."]
position = Vector2(0, 48)
amount = 100
process_material = SubResource("ParticleProcessMaterial_qm2bx")
texture = ExtResource("1_20cuc")
lifetime = 0.5
explosiveness = 1.0
randomness = 0.25

[connection signal="finished" from="StrikeParticle" to="." method="_on_strike_particle_finished"]
